# Vita-IPTV-Player

./: CMakeLists.txt  main.c
.github/workflows/: build.yml
